修改Stop小程序